--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,7 @@ djangorestframework = "^3.12.4"
 python-decouple = "^3.4"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.812"
+prospector = {extras = ["with_bandit", "with_mypy"], version = "^1.3.1"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
