--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ python-decouple = "^3.4"
 
 [tool.poetry.dev-dependencies]
 prospector = {extras = ["with_bandit", "with_mypy"], version = "^1.3.1"}
+pre-commit = "^2.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
