--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2"
 djangorestframework = "^3.12.4"
 python-decouple = "^3.4"
 django-cors-headers = "^3.7.0"
+marshmallow = "^3.12.1"
 
 [tool.poetry.dev-dependencies]
 prospector = {extras = ["with_bandit", "with_mypy"], version = "^1.3.1"}
